--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,6 +7,7 @@
     <title>Bicicletas | Bikcraft</title>
     <meta name="description" content="Bicicletas" />
 
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -14,7 +15,12 @@
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" alt="Bikcraft" />
+          <img
+            src="./img/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+          />
         </a>
 
         <nav aria-label="primaria">
@@ -39,7 +45,12 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+          <img
+            src="./img/bicicletas/nimbus.jpg"
+            width="1120"
+            height="680"
+            alt="Bicicleta preta"
+          />
           <span class="font-2-m color-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -51,19 +62,39 @@
           </p>
           <ul class="font-1-m color-8">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="" />
+              <img
+                src="./img/icones/eletrica.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="" />
+              <img
+                src="./img/icones/carbono.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="" />
+              <img
+                src="./img/icones/velocidade.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               50 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="" />
+              <img
+                src="./img/icones/rastreador.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Rastreador
             </li>
           </ul>
@@ -74,7 +105,12 @@
       <div class="bicicletas-bg">
         <div class="bicicletas container">
           <div class="bicicletas-imagem">
-            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/magic.jpg"
+              width="1120"
+              height="680"
+              alt="Bicicleta preta"
+            />
             <span class="font-2-m color-0">R$ 2499</span>
           </div>
           <div class="bicicletas-conteudo">
@@ -86,19 +122,39 @@
             </p>
             <ul class="font-1-m color-5">
               <li>
-                <img src="./img/icones/eletrica.svg" alt="" />
+                <img
+                  src="./img/icones/eletrica.svg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
                 Motor Elétrico
               </li>
               <li>
-                <img src="./img/icones/carbono.svg" alt="" />
+                <img
+                  src="./img/icones/carbono.svg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
                 Fibra de Carbono
               </li>
               <li>
-                <img src="./img/icones/velocidade.svg" alt="" />
+                <img
+                  src="./img/icones/velocidade.svg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
                 45 km/h
               </li>
               <li>
-                <img src="./img/icones/rastreador.svg" alt="" />
+                <img
+                  src="./img/icones/rastreador.svg"
+                  width="32"
+                  height="32"
+                  alt=""
+                />
                 Rastreador
               </li>
             </ul>
@@ -109,7 +165,12 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+          <img
+            src="./img/bicicletas/nebula.jpg"
+            width="1120"
+            height="680"
+            alt="Bicicleta preta"
+          />
           <span class="font-2-m color-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -121,19 +182,39 @@
           </p>
           <ul class="font-1-m color-8">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="" />
+              <img
+                src="./img/icones/eletrica.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="" />
+              <img
+                src="./img/icones/carbono.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="" />
+              <img
+                src="./img/icones/velocidade.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               50 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="" />
+              <img
+                src="./img/icones/rastreador.svg"
+                width="32"
+                height="32"
+                alt=""
+              />
               Rastreador
             </li>
           </ul>
@@ -144,7 +225,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contato">
           <h3 class="font-2-l-b color-0">Contato</h3>
           <ul class="font-2-m color-5">
@@ -157,13 +238,28 @@
           </ul>
           <div class="footer-social">
             <a href="./">
-              <img src="./img/redes/instagram.svg" alt="Instagram" />
+              <img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" alt="Facebook" />
+              <img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
+              />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
