--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contato" />
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,9 @@
   <body id="contato">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
+        /></a>
 
         <nav aria-label="primária">
           <ul class="header-menu font-1-m color-0">
@@ -53,14 +56,27 @@
           </address>
           <div class="contato-redes">
             <a href="./"
-              ><img src="./img/redes/instagram-p.svg" alt="Instagram"
+              ><img
+                src="./img/redes/instagram-p.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
             /></a>
             <a href="./"
-              ><img src="./img/redes/facebook-p.svg" alt="Facebook"
+              ><img
+                src="./img/redes/facebook-p.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
             /></a>
 
             <a href="./">
-              <img src="./img/redes/youtube-p.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube-p.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </section>
@@ -113,6 +129,8 @@
       <div class="lojas-item">
         <img
           src="./img/lojas/rj.jpg"
+          width="1120"
+          height="520"
           alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ"
         />
         <div class="lojas-conteudo">
@@ -126,7 +144,8 @@
             <a href="tel:+55 219999-9999">+55 21 9999-9999</a>
           </div>
           <p class="lojas-tempo font-1-s">
-            <img src="./img/icones/horario.svg" alt="" /> 08 - 18h de seg à dom
+            <img src="./img/icones/horario.svg" width="20" height="20" alt="" />
+            08 - 18h de seg à dom
           </p>
         </div>
       </div>
@@ -134,6 +153,8 @@
       <div class="lojas-item">
         <img
           src="./img/lojas/sp.jpg"
+          width="1120"
+          height="520"
           alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP"
         />
         <div class="lojas-conteudo">
@@ -148,7 +169,8 @@
             <a href="tel:+55 119999-9999">+55 11 9999-9999</a>
           </div>
           <p class="lojas-tempo font-1-s">
-            <img src="./img/icones/horario.svg" alt="" /> 08 - 18h de seg à dom
+            <img src="./img/icones/horario.svg" width="20" height="20" alt="" />
+            08 - 18h de seg à dom
           </p>
         </div>
       </div>
@@ -156,7 +178,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contact">
           <h3 class="font-2-l-b color-0">Contato</h3>
           <ul class="font-2-m color-5">
@@ -169,14 +191,27 @@
           </ul>
           <div class="footer-social">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt="Instagram"
+              ><img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
             /></a>
             <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
             /></a>
 
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
