--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
+    <link rel="preload" href="./css/style.css" as="style" />
+
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +22,9 @@
   <body>
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
+        /></a>
 
         <nav aria-label="primária">
           <ul class="header-menu font-1-m color-0">
@@ -44,12 +48,19 @@
           </p>
           <a class="button" href="./bicicletas.html">Escolha a sua</a>
         </div>
-        <div>
+
+        <picture>
+          <source
+            media="(max-width: 800px)"
+            srcset="./img/bicicletas/nimbus.jpg"
+          />
           <img
             src="./img/fotos/introducao.jpg"
+            width="1280"
+            height="1600"
             alt="Bicicleta Elétrica Preta"
           />
-        </div>
+        </picture>
       </div>
     </main>
 
@@ -61,21 +72,36 @@
       <ul>
         <li>
           <a href="./bicicletas/magic.html">
-            <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/magic-home.jpg"
+              width="920"
+              height="1040"
+              alt="Bicicleta preta"
+            />
             <h3 class="font-1-xl">Magic Might</h3>
             <span class="font-2-m color-8">R$ 2499</span>
           </a>
         </li>
         <li>
           <a href="./bicicletas/nimbus.html">
-            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/nimbus-home.jpg"
+              width="920"
+              height="1040"
+              alt="Bicicleta preta"
+            />
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m color-8">R$ 4999</span>
           </a>
         </li>
         <li>
           <a href="./bicicletas/nebula.html">
-            <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/nebula-home.jpg"
+              width="920"
+              height="1040"
+              alt="Bicicleta preta"
+            />
             <h3 class="font-1-xl">Nebula Cosmic</h3>
             <span class="font-2-m color-8">R$ 3499</span>
           </a>
@@ -101,7 +127,12 @@
           <a class="link" href="./bicicletas.html"> Escolha um modelo</a>
           <div class="technology-vantagem">
             <div>
-              <img src="./img/icones/eletrica.svg" alt="" />
+              <img
+                src="./img/icones/eletrica.svg"
+                width="24"
+                height="24"
+                alt=""
+              />
               <h3 class="font-1-m color-0">Motor Elétrico</h3>
               <p class="font-2-s color-5">
                 Toda Bikcraft é equipada com um motor elétrico que possui
@@ -110,7 +141,12 @@
               </p>
             </div>
             <div>
-              <img src="./img/icones/rastreador.svg" alt="" />
+              <img
+                src="./img/icones/rastreador.svg"
+                width="24"
+                height="24"
+                alt=""
+              />
               <h3 class="font-1-m color-0">Rastreador</h3>
               <p class="font-2-s color-5">
                 Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
@@ -120,7 +156,12 @@
           </div>
         </div>
         <div class="technology-img">
-          <img src="./img/fotos/tecnologia.jpg" alt="" />
+          <img
+            src="./img/fotos/tecnologia.jpg"
+            width="1200"
+            height="1920"
+            alt=""
+          />
         </div>
       </div>
     </article>
@@ -131,14 +172,70 @@
       </h2>
 
       <ul>
-        <li><img src="./img/parceiros/caravan.svg" alt="caravan" /></li>
-        <li><img src="./img/parceiros/ranek.svg" alt="ranek" /></li>
-        <li><img src="./img/parceiros/handel.svg" alt="handel" /></li>
-        <li><img src="./img/parceiros/dogs.svg" alt="dogs" /></li>
-        <li><img src="./img/parceiros/lescone.svg" alt="lescone" /></li>
-        <li><img src="./img/parceiros/flexblog.svg" alt="flexblog" /></li>
-        <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast" /></li>
-        <li><img src="./img/parceiros/surfbot.svg" alt="surfbot" /></li>
+        <li>
+          <img
+            src="./img/parceiros/caravan.svg"
+            width="140"
+            height="38"
+            alt="caravan"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/ranek.svg"
+            width="149"
+            height="36"
+            alt="ranek"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/handel.svg"
+            width="139"
+            height="50"
+            alt="handel"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/dogs.svg"
+            width="152"
+            height="39"
+            alt="dogs"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/lescone.svg"
+            width="208"
+            height="41"
+            alt="lescone"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/flexblog.svg"
+            width="165"
+            height="38"
+            alt="flexblog"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/wildbeast.svg"
+            width="196"
+            height="34"
+            alt="wildbeast"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/surfbot.svg"
+            width="200"
+            height="49"
+            alt="surfbot"
+          />
+        </li>
       </ul>
     </section>
 
@@ -146,6 +243,8 @@
       <div>
         <img
           src="./img/fotos/depoimento.jpg"
+          width="1560"
+          height="1360"
           alt="Pessoa pedalando uma bicicleta Bikcraft"
         />
       </div>
@@ -199,7 +298,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="49" alt="Bikcraft" />
         <div class="footer-contact">
           <h3 class="font-2-l-b color-0">Contato</h3>
           <ul class="font-2-m color-5">
@@ -212,14 +311,27 @@
           </ul>
           <div class="footer-social">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt="Instagram"
+              ><img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
             /></a>
             <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
             /></a>
 
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
