--- a/orcamento.html
+++ b/orcamento.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Orçamento" />
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,9 @@
   <body id="orcamento">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
+        /></a>
 
         <nav aria-label="primária">
           <ul class="header-menu font-1-m color-0">
@@ -52,10 +55,137 @@
 
             <input type="radio" name="produto" value="nimbus" id="nimbus" />
             <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+            <div class="orcamento-detalhes font-1-xs color-8">
+              <ul class="font-1-xs color-8">
+                <li>
+                  <img
+                    src="./img/icones/eletrica.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Motor Elétrico
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/carbono.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Fibra de Carbono
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/velocidade.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />50 km/h
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/rastreador.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Rastreador
+                </li>
+              </ul>
+              <img
+                src="./img/bicicletas/nimbus.jpg"
+                width="1120"
+                height="680"
+                alt="Bicicleta preta"
+              />
+            </div>
             <input type="radio" name="produto" value="magic" id="magic" />
             <label for="magic">Magic Might <span>R$ 2499</span></label>
+            <div class="orcamento-detalhes font-1-xs color-8">
+              <ul class="font-1-xs color-8">
+                <li>
+                  <img
+                    src="./img/icones/eletrica.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Motor Elétrico
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/carbono.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Fibra de Carbono
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/velocidade.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />45 km/h
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/rastreador.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Rastreador
+                </li>
+              </ul>
+              <img
+                src="./img/bicicletas/magic.jpg"
+                width="1120"
+                height="680"
+                alt="Bicicleta preta"
+              />
+            </div>
+
             <input type="radio" name="produto" value="nebula" id="nebula" />
             <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+            <div class="orcamento-detalhes font-1-xs color-8">
+              <ul class="font-1-xs color-8">
+                <li>
+                  <img
+                    src="./img/icones/eletrica.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Motor Elétrico
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/carbono.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Fibra de Carbono
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/velocidade.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />40 km/h
+                </li>
+                <li>
+                  <img
+                    src="./img/icones/rastreador.svg"
+                    width="32"
+                    height="32"
+                    alt=""
+                  />Rastreador
+                </li>
+              </ul>
+              <img
+                src="./img/bicicletas/nebula.jpg"
+                width="1120"
+                height="680"
+                alt="Bicicleta branca"
+              />
+            </div>
           </div>
 
           <div class="orcamento-conteudo" id="orcamento-seguro">
@@ -120,7 +250,7 @@
     </main>
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contact">
           <h3 class="font-2-l-b color-0">Contato</h3>
           <ul class="font-2-m color-5">
@@ -133,14 +263,27 @@
           </ul>
           <div class="footer-social">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt="Instagram"
+              ><img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
             /></a>
             <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
             /></a>
 
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
