--- a/seguros.html
+++ b/seguros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Seguros" />
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,9 @@
   <body id="seguros">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
+        /></a>
 
         <nav aria-label="primária">
           <ul class="header-menu font-1-m color-0">
@@ -77,7 +80,12 @@
         </h2>
         <ul>
           <li>
-            <img src="./img/icones/eletrica.svg" alt="" />
+            <img
+              src="./img/icones/eletrica.svg"
+              width="32"
+              height="32"
+              alt=""
+            />
             <h3 class="font-1-l color-0">Reparo Elétrico</h3>
             <p class="font-2-s color-5">
               Garantimos o reparo completo do seu motor em caso de falhas.
@@ -85,7 +93,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="" />
+            <img src="./img/icones/carbono.svg" width="32" height="32" alt="" />
             <h3 class="font-1-l color-0">Carbono</h3>
             <p class="font-2-s color-5">
               Nossos quadros são feitos para durar para sempre. Mas caso algo
@@ -93,7 +101,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/sustentavel.svg" alt="" />
+            <img
+              src="./img/icones/sustentavel.svg"
+              width="32"
+              height="32"
+              alt=""
+            />
             <h3 class="font-1-l color-0">Sustentável</h3>
             <p class="font-2-s color-5">
               Trabalhamos com a filosofia de desperdício zero. Qualquer parte
@@ -101,7 +114,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="" />
+            <img
+              src="./img/icones/rastreador.svg"
+              width="32"
+              height="32"
+              alt=""
+            />
             <h3 class="font-1-l color-0">Recuperação</h3>
             <p class="font-2-s color-5">
               Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em
@@ -109,7 +127,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/seguro.svg" alt="" />
+            <img src="./img/icones/seguro.svg" width="32" height="32" alt="" />
             <h3 class="font-1-l color-0">Segurança</h3>
             <p class="font-2-s color-5">
               Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu
@@ -117,7 +135,12 @@
             </p>
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="" />
+            <img
+              src="./img/icones/velocidade.svg"
+              width="32"
+              height="32"
+              alt=""
+            />
             <h3 class="font-1-l color-0">Rapidez</h3>
             <p class="font-2-s color-5">
               A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -197,7 +220,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contact">
           <h3 class="font-2-l-b color-0">Contato</h3>
           <ul class="font-2-m color-5">
@@ -210,14 +233,27 @@
           </ul>
           <div class="footer-social">
             <a href="./"
-              ><img src="./img/redes/instagram.svg" alt="Instagram"
+              ><img
+                src="./img/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
             /></a>
             <a href="./"
-              ><img src="./img/redes/facebook.svg" alt="Facebook"
+              ><img
+                src="./img/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="Facebook"
             /></a>
 
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img
+                src="./img/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="Youtube"
+              />
             </a>
           </div>
         </div>
